Fix Styling of ActivateLicenseView (#792)
This PR removes a scrollbar from activate license view and improves the
default message the user sees after opening the modal.

### How Has This Been Tested: 

- run IDE and see how it looks




https://github.com/user-attachments/assets/88b2da08-505b-4467-9410-9d4ea9ce7aa7

--- a/packages/vscode-extension/src/webview/views/ActivateLicenseView.css
+++ b/packages/vscode-extension/src/webview/views/ActivateLicenseView.css
@@ -1,5 +1,6 @@
 .container {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
   gap: 8px;
   align-items: left;
 }
@@ -9,7 +10,8 @@
   background-color: var(--swm-input-background);
   color: var(--swm-default-text);
   width: 100%;
-  padding: 7px;
+  padding-top: 7px;
+  padding-bottom: 7px;
   border: 1px;
   text-align: center;
   font-size: 18px;
@@ -20,8 +22,6 @@
 
 .info-row {
   width: 100%;
-
-  padding-right: 8px;
   padding-bottom: 20px;
   flex: 1;
   align-items: left;
